# chessbots

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json
apps/web/: .env.example  CLAUDE.md  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
bots/stockfish-bot/: .env.example  Dockerfile  package-lock.json  package.json
contracts/evm/: foundry.toml
programs/chessbots-tournament/: CLAUDE.md  Cargo.toml
programs/chessbots-tournament/src/: CLAUDE.md  constants.rs  errors.rs  events.rs  lib.rs
programs/chessbots-tournament/src/instructions/: advance_round.rs  cancel_tournament.rs  create_game.rs  create_tournament.rs  distribute_prizes.rs  finalize_tournament.rs  initialize_protocol.rs  mod.rs  register_agent.rs  register_for_tournament.rs  start_game.rs  start_tournament.rs  submit_game_result.rs  update_standings.rs
programs/chessbots-tournament/src/state/: CLAUDE.md  agent.rs  game.rs  mod.rs  protocol.rs  registration.rs  tournament.rs
scripts/: CLAUDE.md  airdrop-retry.sh  deploy-railway.sh  init-devnet.ts  test-tournament.ts
services/agent-gateway/: .env.example  CLAUDE.md  Dockerfile  package.json  railway.toml
services/chess-engine/: .env.example  CLAUDE.md  Dockerfile  package-lock.json  package.json  railway.toml
services/relayer/: .env.example  Dockerfile  package-lock.json  package.json  railway.toml
tasks/: agent-context-prompt.md  gtm-bender-command.md
templates/chessbots-starter/: README.md  (+3 more)
tests/: chessbots-tournament.ts
(+239 files in other folders)
