[package]
name = "chessbots-tournament"
version = "0.1.0"
description = "ChessBots on-chain AI chess tournament protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chessbots_tournament"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
blake3 = "=1.5.5"
